# liltab

./: .gitignore  README.md  makefile  poc.ipynb  pyproject.toml  pytest-coverage.txt  pytest.xml  requirements-bck.txt  requirements.txt
.github/workflows/: code_check.yml  test.yml
.venv-test/: pyvenv.cfg
config/: 01_synthetic_data_experiment_config.yaml  02_openml_data_experiment_config.yaml  03_openml_clf_data_experiment_config.yaml  04_same_domain_experiment_config.yaml  05_new_classes_experiment_config.yaml  06_big_data_experiment_config.yaml  big_data_experiment_config.yaml  new_classes_experiment_config.yaml  openml_data_experiment_config.yaml  same_domain_experiment_config.yaml  sample_experiment_config.yaml  synthetic_data_experiment_config.yaml  synthetic_data_small_experiment_config.yaml
data/: .gitignore
experiments/: 01_synthetic.py  02_openml.py  03_openml_clf.py  04_same_domain.py  05_new_classes.py  06_big_data.py
liltab/data/: dataloaders.py  datasets.py  factory.py  preprocessing.py
liltab/model/: heterogenous_attributes_network.py  utils.py
liltab/train/: logger.py  trainer.py  utils.py
results/: 01_test_data.pkl
src/: file_1.py  file_2.py
test/: conftest.py  sample.py  test_file_1.py  test_file_2.py  test_sample.py  utils.py
test/liltab/: test_fail.py
test/liltab/data/: test_dataloaders.py  test_datasets.py
test/liltab/model/: test_heterogenous_attributes_network.py  test_model_utils.py  test_utils.py
test/liltab/train/: test_logger.py  (+1 more)
test/resources/: random_df_1.csv  random_df_2.csv  random_df_3.csv  random_df_4.csv
(+2 files in other folders)
