[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["liltab"]

[project]
name = "liltab"
version = "1.0.4"
authors = [
  { name="Antoni Zajko, Dawid Płudowski", email="antoni.zajko.1@gmail.com" }
]
description = "Package for meta-learning across data with varying attributes spaces."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "torch>=2.0",
    "pandas>=2.0",
    "numpy>=1.25.0",
    "scikit-learn>=1.3.0",
    "pytorch_lightning>=2.0.6",
    "tensorboard>=2.14.0"
]

[project.urls]
"Homepage" = "https://github.com/azoz01/liltab"
